--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -9,6 +9,9 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:mysql://db:3306/devOrbit
       - SPRING_DATASOURCE_USERNAME=root
       - SPRING_DATASOURCE_PASSWORD=1234
+    dns:
+      - 8.8.8.8
+      - 1.1.1.1
 
   db:
     image: mysql:8
