--- a/Backend/app/src/main/resources/application.properties
+++ b/Backend/app/src/main/resources/application.properties
@@ -1,7 +1,16 @@
-spring.application.name=app
-spring.datasource.url=jdbc:mysql://db:3306/devOrbit
+spring.application.name=api
+spring.datasource.url=jdbc:mysql://localhost:3306/devorbit?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuración de Hibernate/JPA
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+logging.level.org.springframework.security=DEBUG
+
+jwt.secret=clave-super-secreta-de-mas-de-32-caracteres!
+jwt.expiration=3600000
