--- a/Backend/app/pom.xml
+++ b/Backend/app/pom.xml
@@ -17,6 +17,7 @@
     <properties>
         <jjwt.version>0.11.5</jjwt.version>
     </properties>
+    
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -101,9 +102,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.itextpdf</groupId>
-            <artifactId>itext7-core</artifactId>
-            <version>7.1.17</version>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.29</version>
         </dependency>
 
         <!-- Validation -->
