--- a/Backend/app/Dockerfile
+++ b/Backend/app/Dockerfile
@@ -1,10 +1,16 @@
+# Etapa 1: Construcción
+FROM maven:3.9.4-eclipse-temurin-17 AS builder
+
+WORKDIR /app
+COPY . .
+RUN mvn clean package -DskipTests
+
+# Etapa 2: Imagen final
 FROM eclipse-temurin:23-jdk-alpine
 
 VOLUME /tmp
 
-ARG JAR_FILE=target/*.jar
-
-COPY ${JAR_FILE} app.jar
+COPY --from=builder /app/target/*.jar app.jar
 
 EXPOSE 8080
 
