--- a/Backend/app/src/main/resources/application.properties
+++ b/Backend/app/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=app
-spring.datasource.url=jdbc:mysql://db:3306/devOrbit
+spring.datasource.url=mysql.railway.internal://db:3306/railway
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=XZbADUNQAYrNjMJrAgAwgLrtrEAWDIkZ
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuración de Hibernate/JPA
