--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     depends_on:
       - db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:mysql://db:3306/devOrbit
+      - SPRING_DATASOURCE_URL=mysql.railway.internal://db:3306/railway
       - SPRING_DATASOURCE_USERNAME=root
-      - SPRING_DATASOURCE_PASSWORD=1234
+      - SPRING_DATASOURCE_PASSWORD=XZbADUNQAYrNjMJrAgAwgLrtrEAWDIkZ
     dns:
       - 8.8.8.8
       - 1.1.1.1
@@ -19,8 +19,8 @@ services:
     ports:
       - "3306:3306"
     environment:
-      MYSQL_DATABASE: devOrbit
-      MYSQL_ROOT_PASSWORD: 1234
+      MYSQL_DATABASE: railway
+      MYSQL_ROOT_PASSWORD: XZbADUNQAYrNjMJrAgAwgLrtrEAWDIkZ
     volumes:
       - db_data:/var/lib/mysql
 
