--- a/Backend/app/src/main/resources/application.properties
+++ b/Backend/app/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=app
-spring.datasource.url=mysql.railway.internal://db:3306/railway
+spring.datasource.url=jdbc:mysql://trolley.proxy.rlwy.net:35698/railway
 spring.datasource.username=root
 spring.datasource.password=XZbADUNQAYrNjMJrAgAwgLrtrEAWDIkZ
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
