--- a/Backend/app/src/main/resources/application.properties
+++ b/Backend/app/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=app
-spring.datasource.url=jdbc:mysql://trolley.proxy.rlwy.net:35698/railway
+spring.datasource.url=jdbc:mysql://switchyard.proxy.rlwy.net:53618/railway
 spring.datasource.username=root
-spring.datasource.password=XZbADUNQAYrNjMJrAgAwgLrtrEAWDIkZ
+spring.datasource.password=SFNIvOuZOPDNzyoFBODmgsFibmkuaMyg
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuración de Hibernate/JPA
