--- a/Backend/app/src/main/resources/application.properties
+++ b/Backend/app/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=app
-spring.datasource.url=jdbc:mysql://switchyard.proxy.rlwy.net:53618/railway
-spring.datasource.username=root
-spring.datasource.password=SFNIvOuZOPDNzyoFBODmgsFibmkuaMyg
+spring.datasource.url=jdbc:mysql://mysql-3e1696c9-sebas10stiven212-5dbe.i.aivencloud.com:18456/defaultdb?ssl-mode=REQUIRED
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_fjGvr1t9mxWy7vG1yHy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuración de Hibernate/JPA
