--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -4,9 +4,12 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:mysql://switchyard.proxy.rlwy.net:53618/railway
-      - SPRING_DATASOURCE_USERNAME=root
-      - SPRING_DATASOURCE_PASSWORD=SFNIvOuZOPDNzyoFBODmgsFibmkuaMyg
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql-3e1696c9-sebas10stiven212-5dbe.i.aivencloud.com:18456/defaultdb?ssl-mode=REQUIRED
+      - SPRING_DATASOURCE_USERNAME=avnadmin
+      - SPRING_DATASOURCE_PASSWORD=AVNS_fjGvr1t9mxWy7vG1yHy
+      - SPRING_DATASOURCE_DRIVER_CLASS_NAME=com.mysql.cj.jdbc.Driver
+      - SPRING_DATASOURCE_HIKARI_DATA_SOURCE_PROPERTIES_useSSL=true
+      - SPRING_DATASOURCE_HIKARI_DATA_SOURCE_PROPERTIES_requireSSL=true
     dns:
       - 8.8.8.8
       - 1.1.1.1
